# agri-chatbot

./: .env.example  .gitignore  Agri-Chatbot API.postman_collection.json  Dockerfile  LICENSE  README.md  main.py  phase1_config.json  phase2_config.json  phase3_config.json  phase4_config.json  phase5_config.json  phase6_config.json  pyproject.toml  requirements.txt
app/: graph.py
notebooks/: 01_setup_and_data_exploration.ipynb  02_pinecone_index_creation.ipynb  03_mongodb_memory_setup.ipynb  04_intent_classification.ipynb  05_retrieval_pipeline.ipynb  06_answer_generation.ipynb  07_agentic_system.ipynb
