[project]
name = "agri-chatbot"
version = "0.1.0"
description = "Agentic RAG system for agricultural chatbot with disease and scheme information"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    
    # Jupyter 
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "notebook>=7.0.0",
    
    # LangChain Ecosystem
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.0.20",
    "langsmith>=0.0.77",
    
    # Vector Database
    "pinecone-client>=3.0.0",
    
    # Memory Database
    "pymongo>=4.6.0",
    "motor>=3.3.0",
    
    # Retrieval & NLP
    "sentence-transformers>=2.3.1",
    "rank-bm25>=0.2.2",
    
    # PDF Processing
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "tiktoken>=0.5.2",
    
    # Visualization (for notebooks)
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.12.0",
    "ruff>=0.1.9",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]